# Game-Bot-AI

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_V2.md  AUGMENTATION_GUIDE.md  CLEANUP_PLAN.md  DATA_FOLDERS_GUIDE.md  DETECTION_SETTINGS.md  FINAL_SUMMARY.md  FIX_DATA_MESS.md  HP_BAR_AI_DESIGN.md  HP_BAR_ARCHITECTURE.md  HP_BAR_QUICKSTART.md  IMPLEMENTATION_PLAN_V2.md  LAUNCH.bat  OCR_THREADING_SUMMARY.md  ORGANIZATION.md  OVERFITTING_DEBUG.md  RECORDING_COMMANDS.md  TRAINING_DATA_FLOW.md  TRAINING_WORKFLOW_V2.md  V2_CODE_REVIEW.md  V2_FEATURE_SPEC.md  V2_OPTIMIZATIONS_APPLIED.md  V2_SYSTEM_OVERVIEW.md  V2_TECHNICAL_REVIEW.md  V2_TODO.md  V2_TRAINING_WORKFLOW.md  VISION_PIPELINE_V2.md  WORKFLOW.md  analyze_dataset.py  auto_screenshot.py  cleanup_and_organize.py  debug_tactician_corrections.py  fix_labels.py  launcher.py  main.py  pyproject.toml  semantic_image_search.py  test_gui_detector.py  validate_recording.py
darkorbit_bot/: .gitignore  reasoning_demo.py  requirements.txt  train.py
darkorbit_bot/analysis/: analyze_patterns.py
darkorbit_bot/detection/: auto_labeler.py  check_deps.py  detector.py  discover_ui.py  fastsam_visualizer.py  gemini_labeler.py  list_models.py  lm_studio_labeler.py  local_labeler.py  prepare_dataset.py  sam2_visualizer.py  test_cv.py  train_yolo.py  visualize_labels.py
tools/: hp_labeler.py
yolo/: README.md  autolabel_config.json  finetune_pretrained.py  inspect_yolo_model.py  simplify_dataset_for_finetuning.py  test_all_models.py  test_model.py  train_detect.py  train_yolo26_improved.py  train_yolov11_comparison.py  yolo_finetuning.py
(+95 files in other folders)
