[project]
name = "darkorbit-bot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "customtkinter>=5.2.2",
    "dxcam>=0.0.5",
    "einops>=0.8.1",
    "matplotlib==3.10.8",
    "mss==10.1.0",
    "numpy==2.4.1",
    "opencv-python==4.13.0.90",
    "onnxruntime-gpu",
    "pandas==2.3.3",
    "pillow==12.1.0",
    "psutil==7.2.1",
    "pygetwindow>=0.0.9",
    "pynput==1.8.1",
    "rapidocr-onnxruntime>=1.3.0",
    "scikit-learn>=1.8.0",
    "tensorboard>=2.20.0",
    "torch",
    "torchvision",
    "tqdm>=4.67.1",
    "ultralytics==8.4.6",
]

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
